@@ -1,3 +1,4 @@
+* Allow to add tests through entry points
 * Add translated descriptor for Reference field
 * Implement alter_type and alter_size for sqlite backend
 * Add a maximum size for request
